--- a/src/_sass/css/_partials/foundation/_reset.scss
+++ b/src/_sass/css/_partials/foundation/_reset.scss
@@ -1,73 +1,73 @@
 body,
 html {
-	height: 100%;
+  height: 100%;
 }
 
 *,
 *::after,
 *::before {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 * {
-	margin: 0;
-	padding: 0;
-	font-size: inherit;
-	line-height: inherit;
+  margin: 0;
+  padding: 0;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 pre,
 textarea {
-	overflow: auto;
+  overflow: auto;
 }
 
 [hidden],
 audio:not([controls]),
 template {
-	display: none;
+  display: none;
 }
 
 details,
 main,
 summary {
-	display: block;
+  display: block;
 }
 
-input[type=number] {
-	width: auto;
+input[type="number"] {
+  width: auto;
 }
 
-input[type=search] {
-	-webkit-appearance: textfield;
+input[type="search"] {
+  -webkit-appearance: textfield;
 }
 
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
-	-webkit-appearance: none;
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
 }
 
 progress {
-	display: inline-block;
+  display: inline-block;
 }
 
 sub,
 sup {
-	font-size: 75%;
-	line-height: 0;
-	position: relative;
-	vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sup {
-	top: -0.5em;
+  top: -0.5em;
 }
 
 sub {
-	bottom: -0.25em;
+  bottom: -0.25em;
 }
 
 textarea {
-	resize: vertical;
+  resize: vertical;
 }
 
 audio,
@@ -76,80 +76,80 @@ iframe,
 img,
 svg,
 video {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 img {
-	max-width: 100%;
-	height: auto;
-	border: 0;
+  max-width: 100%;
+  height: auto;
+  border: 0;
 }
 
 button,
 input,
 select,
 textarea {
-	min-height: 1.5em;
-	color: inherit;
-	font-weight: inherit;
-	font-style: inherit;
-	font-family: inherit;
+  min-height: 1.5em;
+  color: inherit;
+  font-weight: inherit;
+  font-style: inherit;
+  font-family: inherit;
 }
 
 button {
-	overflow: visible;
+  overflow: visible;
 }
 
 button,
 select {
-	text-transform: none;
+  text-transform: none;
 }
 
 button,
 html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	-webkit-appearance: button;
-	cursor: pointer;
+  -webkit-appearance: button;
+  cursor: pointer;
 }
 
 button[disabled],
 html input[disabled] {
-	cursor: default;
+  cursor: default;
 }
 
 button::-moz-focus-inner,
 input::-moz-focus-inner {
-	border: 0;
-	padding: 0;
+  border: 0;
+  padding: 0;
 }
 
 input {
-	line-height: normal;
+  line-height: normal;
 }
 
 code,
 kbd,
 pre,
 samp {
-	font-family: monospace,monospace;
+  font-family: monospace, monospace;
 }
 
 ol,
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 select {
-	-moz-appearance: none;
-	-webkit-appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
 }
 
 table {
-	border-spacing: 0;
-	border-collapse: collapse;
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
 fieldset {
-	border: 0;
+  border: 0;
 }
