--- a/src/_sass/css/_partials/_utilities.scss
+++ b/src/_sass/css/_partials/_utilities.scss
@@ -17,7 +17,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url(spacer.gif);
+    background: url(/img/spacer.gif);
   }
 }
 
