:art: Style: ベースフォントサイズの変更

--- a/src/_sass/css/_partials/_variables.scss
+++ b/src/_sass/css/_partials/_variables.scss
@@ -1,7 +1,8 @@
 $background-color-base: #fff;
 $base-font-family: "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Verdana,
   "ＭＳ Ｐゴシック", sans-serif;
-$font-size-base: 3.125vw;
+$font-size-md: 16px !default;
+$font-size-sm: 3.125vw !default;
 $font-color-base: #333;
 $line-height-base: 1.6875;
 
