--- a/src/_sass/css/main.scss
+++ b/src/_sass/css/main.scss
@@ -5,6 +5,7 @@
 @import "_partials/mixin";
 @import "_partials/foundation/reset";
 @import "_partials/foundation/base";
+@import "_partials/component/**";
 @import "_partials/utilities";
 
 // テスト駆動マークアップ用スタイルシート
