:wheelchair: Update: カードコンポーネントに :focus-within 疑似クラスのスタイルを追加

--- a/src/_docs/.vuepress/styles/index.styl
+++ b/src/_docs/.vuepress/styles/index.styl
@@ -179,6 +179,11 @@ a {
           box-shadow: 0 0 0 0.25rem;
 }
 
+.c-card:focus-within {
+  -webkit-box-shadow: 0 0 0 0.25rem;
+          box-shadow: 0 0 0 0.25rem;
+}
+
 .c-card_header {
   -ms-flex-negative: 0;
       flex-shrink: 0;
