--- a/src/_sass/css/_partials/_mixin.scss
+++ b/src/_sass/css/_partials/_mixin.scss
@@ -57,3 +57,38 @@
     }
   }
 }
+
+// 先頭行だけ `line-height` の上スペースを取り除く
+@mixin line-height-crop($line-height) {
+  &::before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    margin-top: calc((1 - #{$line-height}) * 0.5em);
+  }
+}
+
+// 要素数が n 個以上の各要素に適用される
+@mixin nth-or-more($n) {
+  &:first-child:nth-last-child(n + #{$n}),
+  &:first-child:nth-last-child(n + #{$n}) ~ & {
+    @content;
+  }
+}
+
+// 要素数が n 個以下の各要素に適用される
+@mixin nth-or-less($n) {
+  &:first-child:nth-last-child(-n + #{$n}),
+  &:first-child:nth-last-child(-n + #{$n}) ~ & {
+    @content;
+  }
+}
+
+// 要素数が n から m までの各要素に適用される
+@mixin nth-between($n, $m) {
+  &:first-child:nth-last-child(n + #{$n}):nth-last-child(-n + #{$m}),
+  &:first-child:nth-last-child(n + #{$n}):nth-last-child(-n + #{$m}) ~ & {
+    @content;
+  }
+}
