--- a/src/_sass/css/_partials/foundation/_base.scss
+++ b/src/_sass/css/_partials/foundation/_base.scss
@@ -18,3 +18,11 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+// アクセシビリティ対応｜iPhone の「視差効果を減らす」に設定しているユーザーに対して、アニメーションを無効にする。
+@media (prefers-reduced-motion: reduce){
+  * {
+    animation: unset !important;
+    transition: none !important;
+  }
+}
