:lipstick: Update: ベースフォントサイズの変更

--- a/src/_sass/css/_partials/foundation/_base.scss
+++ b/src/_sass/css/_partials/foundation/_base.scss
@@ -8,6 +8,7 @@ html {
 body {
   background-color: $background-color-base;
   color: $font-color-base;
+  font-size: 1.6rem;
   font-family: $base-font-family;
   -webkit-text-size-adjust: 100%;
   line-height: $line-height-base;
@@ -20,7 +21,7 @@ a {
 }
 
 // アクセシビリティ対応｜iPhone の「視差効果を減らす」に設定しているユーザーに対して、アニメーションを無効にする。
-@media (prefers-reduced-motion: reduce){
+@media (prefers-reduced-motion: reduce) {
   * {
     animation: unset !important;
     transition: none !important;
