:tada: Add: rollup.js の追加

--- a/src/_ejs/index.ejs
+++ b/src/_ejs/index.ejs
@@ -10,6 +10,7 @@
   <h1>吾輩は猫である。名前はまだ無い。</h1>
 </main>
 
+<script src="/js/bundle.js"></script>
 <script src="/js/main.js"></script>
 </body>
 </html>
