--- a/src/_sass/css/_partials/_test.scss
+++ b/src/_sass/css/_partials/_test.scss
@@ -15,12 +15,12 @@ a[href=""] {
   ERROR: リンクが設定されていません。
 }
 
-[target="_blank"]:not([rel="noopener noreferrer"]) {
+[target="_blank"]:not([rel*="noopener"]) {
   outline: 5px solid red;
   ERROR: フィッシング詐欺攻撃の脆弱性があります。
 }
 
-iframe:not([src*="rel=0"]) {
+iframe[src^="https://www.youtube.com/embed/"]:not([src*="rel=0"]) {
   outline: 5px solid red;
   ERROR: YouTube の関連動画を同チャンネル内に制御されてません。
 }
