:+1: Update: 開発モードで先駆動マークアップをおこなう制御

--- a/src/_sass/css/_partials/_test.scss
+++ b/src/_sass/css/_partials/_test.scss
@@ -1,26 +1,26 @@
 img {
   &:not([alt]) {
     outline: 5px solid red;
-    ERROR: img 要素には、alt 属性が必須です。
+    ERROR: img 要素には、alt 属性が必須です。;
   }
 
   &[alt=""] {
     outline: 5px solid yellow;
-    WARNING: alt 属性の値が指定されていません。
+    WARNING: alt 属性の値が指定されていません。;
   }
 }
 
 a[href=""] {
   outline: 5px solid red;
-  ERROR: リンクが設定されていません。
+  ERROR: リンクが設定されていません。;
 }
 
 [target="_blank"]:not([rel*="noopener"]) {
   outline: 5px solid red;
-  ERROR: フィッシング詐欺攻撃の脆弱性があります。
+  ERROR: フィッシング詐欺攻撃の脆弱性があります。;
 }
 
 iframe[src^="https://www.youtube.com/embed/"]:not([src*="rel=0"]) {
   outline: 5px solid red;
-  ERROR: YouTube の関連動画を同チャンネル内に制御されてません。
+  ERROR: YouTube の関連動画を同じチャンネル内に制御されてまいせん。;
 }
