:+1: Update: line-height-crop の機能改善

--- a/src/_sass/css/_partials/_mixin.scss
+++ b/src/_sass/css/_partials/_mixin.scss
@@ -58,14 +58,16 @@
   }
 }
 
-// 先頭行だけ `line-height` の上スペースを取り除く
-@mixin line-height-crop($line-height) {
-  &::before {
+// `line-height` の上下余白を取り除く
+@mixin line-height-crop($line-height, $direction: top) {
+  $pseudo: if($direction == top, before, after);
+
+  &::#{$pseudo} {
     content: "";
     display: block;
     width: 0;
     height: 0;
-    margin-top: calc((1 - #{$line-height}) * 0.5em);
+    margin-#{$direction}: calc((1 - #{$line-height}) * 0.5em);
   }
 }
 
