:+1: Update: mixin のパーシャル化

--- a/src/_sass/css/main.scss
+++ b/src/_sass/css/main.scss
@@ -2,7 +2,7 @@
 
 @import "_partials/variables";
 @import "_partials/function";
-@import "_partials/mixin";
+@import "_partials/mixins/**";
 @import "_partials/foundation/reset";
 @import "_partials/foundation/base";
 @import "_partials/components/**";
