:+1: Update: ボタンコンポーネントの見直し

--- a/src/_ejs/index.ejs
+++ b/src/_ejs/index.ejs
@@ -8,6 +8,10 @@
 
 <main>
   <h1>吾輩は猫である。名前はまだ無い。</h1>
+  <a class="p-btn" href="#">CLICK ME</a>
+  <a class="p-btn -primary" href="#">CLICK ME</a>
+  <a class="p-btn -outline" href="#">CLICK ME</a>
+  <a class="p-btn -primary -outline" href="#">CLICK ME</a>
 </main>
 
 <script src="/js/bundle.js"></script>
