--- a/src/_sass/css/main.scss
+++ b/src/_sass/css/main.scss
@@ -6,6 +6,7 @@
 @import "_partials/foundation/reset";
 @import "_partials/foundation/base";
 @import "_partials/components/**";
+@import "_partials/projects/**";
 @import "_partials/helpers/**";
 @import "_partials/utilities";
 
