--- a/src/_sass/css/_partials/_variables.scss
+++ b/src/_sass/css/_partials/_variables.scss
@@ -1,38 +1,3 @@
-$background-color-base: #fff;
-$base-font-family: "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Verdana,
-  "ＭＳ Ｐゴシック", sans-serif;
-$font-size-sm: 2.6666667vw !default;
-$font-size-md: 10px !default;
-$font-color-base: #333;
-$line-height-base: 1.6875;
-
-$breakpoints: (
-  sm: 0,
-  md: 768px,
-  lg: 1280px
-) !default;
-
-$color-black: #000 !default;
-$color-white: #fff !default;
-$color-blue: #007bff !default;
-
-$btn-primary-color: $color-white !default;
-$btn-primary-bg: $color-blue !default;
-
-$modal-dialog-bg: $color-white !default;
-$modal-backdrop: $color-black !default;
-
-$zindex-overlay: 1000 !default;
-$zindex-tooltip: 1001 !default;
-$zindex-carousel: 1002 !default;
-$zindex-dropdown: 1003 !default;
-$zindex-stickHeader: 1004 !default;
-$zindex-modal: 1005 !default;
-$zindex-loader: 1006 !default;
-
-$modal-offset-x: 20px; // モーダルウィンドウの左右の余白
-$modal-offset-top: 64px; // モーダルウィンドウの上の余白（コンテンツ内の要素が画面の高さを超えた場合に適用される）
-
 $linear: cubic-bezier(0.25, 0.25, 0.75, 0.75);
 $ease: cubic-bezier(0.25, 0.1, 0.25, 1);
 $ease-in: cubic-bezier(0.42, 0, 1, 1);
@@ -62,3 +27,54 @@ $easeInOutSine: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 $easeInOutExpo: cubic-bezier(1, 0, 0, 1);
 $easeInOutCirc: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 $easeInOutBack: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+$color-white: #fff !default;
+$color-black: #000 !default;
+$color-black-light: #353535 !default;
+$color-blue: #007bff !default;
+$color-red: #d24d57 !default;
+
+$background-color-base: $color-white;
+$base-font-family: "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Verdana,
+  "ＭＳ Ｐゴシック", sans-serif;
+$font-size-sm: 2.6666667vw !default;
+$font-size-md: 10px !default;
+$font-color-base: $color-black-light;
+$line-height-base: 1.6875;
+
+$dark-background-color-base: $color-black-light;
+$dark-font-color-base: $color-white;
+
+$breakpoints: (
+  sm: 0,
+  md: 768px,
+  lg: 1280px
+) !default;
+
+$btn-color: $color-white !default;
+$btn-bg-color: $color-black !default;
+
+$btn-primary-color: $color-white !default;
+$btn-primary-bg-color: $color-blue !default;
+
+$btn-outline-border-color: $color-red !default;
+$btn-outline-bg-color: $color-red !default;
+
+$btn-primary-outline-border-color: $color-blue !default;
+
+$btn-line-height: 1.4 !default;
+$btn-border-width: 2px !default;
+
+$modal-dialog-bg: $color-white !default;
+$modal-backdrop: $color-black !default;
+
+$zindex-overlay: 1000 !default;
+$zindex-tooltip: 1001 !default;
+$zindex-carousel: 1002 !default;
+$zindex-dropdown: 1003 !default;
+$zindex-stickHeader: 1004 !default;
+$zindex-modal: 1005 !default;
+$zindex-loader: 1006 !default;
+
+$modal-offset-x: 20px; // モーダルウィンドウの左右の余白
+$modal-offset-top: 64px; // モーダルウィンドウの上の余白（コンテンツ内の要素が画面の高さを超えた場合に適用される）
