:+1: Add: ヘルパークラスの追加

--- a/src/_sass/css/_partials/_variables.scss
+++ b/src/_sass/css/_partials/_variables.scss
@@ -72,7 +72,7 @@ $zindex-overlay: 1000 !default;
 $zindex-tooltip: 1001 !default;
 $zindex-carousel: 1002 !default;
 $zindex-dropdown: 1003 !default;
-$zindex-stickHeader: 1004 !default;
+$zindex-sticky: 1004 !default;
 $zindex-modal: 1005 !default;
 $zindex-loader: 1006 !default;
 
