--- a/src/_ejs/index.ejs
+++ b/src/_ejs/index.ejs
@@ -8,9 +8,8 @@
 
 <main>
   <h1>吾輩は猫である。名前はまだ無い。</h1>
-  <a class="p-btn" href="#">CLICK ME</a>
-  <a class="p-btn -primary" href="#">CLICK ME</a>
-  <a class="p-btn -outline" href="#">CLICK ME</a>
+  <%- include(sitedata.path.relative + '_partials/_drawer')%>
+  <a class="p-btn -outline js-drawer" href="#" aria-expanded="false" aria-controls="drawer">CLICK ME</a>
   <a class="p-btn -primary -outline" href="#">CLICK ME</a>
 </main>
 
