--- a/src/_sass/css/_partials/_variables.scss
+++ b/src/_sass/css/_partials/_variables.scss
@@ -42,6 +42,8 @@ $font-size-md: 10px !default;
 $font-color-base: $color-black-light;
 $line-height-base: 1.6875;
 
+$base-timing-function: ease;
+
 $dark-background-color-base: $color-black-light;
 $dark-font-color-base: $color-white;
 
@@ -73,8 +75,13 @@ $zindex-tooltip: 1001 !default;
 $zindex-carousel: 1002 !default;
 $zindex-dropdown: 1003 !default;
 $zindex-sticky: 1004 !default;
-$zindex-modal: 1005 !default;
-$zindex-loader: 1006 !default;
+$zindex-drawer: 1005 !default;
+$zindex-modal: 1006 !default;
+$zindex-loader: 1007 !default;
 
 $modal-offset-x: 20px; // モーダルウィンドウの左右の余白
 $modal-offset-top: 64px; // モーダルウィンドウの上の余白（コンテンツ内の要素が画面の高さを超えた場合に適用される）
+
+$drawer-bg-color: $color-black-light !default;
+$drawer-backdrop-bg-color: $color-black !default;
+$drawer-transition-duration: 0.75s;
