--- a/src/_sass/css/main.scss
+++ b/src/_sass/css/main.scss
@@ -5,6 +5,7 @@
 @import "_partials/mixins/**";
 @import "_partials/foundation/reset";
 @import "_partials/foundation/base";
+@import "_partials/layout/**";
 @import "_partials/components/**";
 @import "_partials/projects/**";
 @import "_partials/helpers/**";
