--- a/src/_sass/css/main.scss
+++ b/src/_sass/css/main.scss
@@ -3,6 +3,7 @@
 @import "_partials/variables";
 @import "_partials/function";
 @import "_partials/mixins/**";
+@import "_partials/animation";
 @import "_partials/foundation/reset";
 @import "_partials/foundation/base";
 @import "_partials/layout/**";
