--- a/src/_sass/css/_partials/helpers/_copyguard.scss
+++ b/src/_sass/css/_partials/helpers/_copyguard.scss
@@ -1,15 +1,15 @@
 .copyguard {
-  pointer-events: none;
-  touch-callout: none;
-  user-select: none;
   position: relative;
+  user-select: none;
+  pointer-events: none;
+  -webkit-touch-callout: none;
 
   &::before {
-    content: "";
-    display: block;
     position: absolute;
+    display: block;
     width: 100%;
     height: 100%;
     background: url(/img/spacer.gif);
+    content: "";
   }
 }
