--- a/src/_sass/css/_partials/foundation/_base.scss
+++ b/src/_sass/css/_partials/foundation/_base.scss
@@ -1,4 +1,8 @@
 :root {
+  @each $breakpoint, $value in $breakpoints {
+    --breakpoint-#{$breakpoint}: #{$value};
+  }
+
   @each $breakpoint in map-keys($breakpoints) {
     @include breakpoint-up($breakpoint) {
       @each $value in map-get($root-font-sizes, $breakpoint) {
