:lipstick: Style: MS P ゴシックの削除（#13）

--- a/src/_sass/css/_partials/_variables.scss
+++ b/src/_sass/css/_partials/_variables.scss
@@ -36,7 +36,7 @@ $color-red: #d24d57 !default;
 
 $background-color-base: $color-white;
 $base-font-family: "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Verdana,
-  "ＭＳ Ｐゴシック", sans-serif;
+  sans-serif;
 $font-color-base: $color-black-light;
 $line-height-base: 1.6875;
 
