--- a/src/_sass/css/_partials/_variables.scss
+++ b/src/_sass/css/_partials/_variables.scss
@@ -35,8 +35,7 @@ $color-blue: #007bff !default;
 $color-red: #d24d57 !default;
 
 $background-color-base: $color-white;
-$base-font-family: "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Verdana,
-  sans-serif;
+$base-font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Verdana, sans-serif;
 $font-color-base: $color-black-light;
 $line-height-base: 1.6875;
 
