💄 Style: Windows の欧文、和文書体の変更（#13）
■ Verdana → Segoe UI の変更理由
- 視認性に優れたサンセリフ体
- Arial でもいいが、Segoe UI は Bootstrap で優先指定されている
- Verdana 以外の欧文書体が出揃ってる感

■ BIZ UDPGothic の採用理由
- ユニバーサルデザイン
- Windows 10 October 2018 Update で搭載されたフォント（ICS MEDIA 調べ）ゆえに少し冒険的

■ 参考サイト
- [2020年に最適なfont-familyの書き方](https://ics.media/entry/200317/)

--- a/src/_sass/css/_partials/_variables.scss
+++ b/src/_sass/css/_partials/_variables.scss
@@ -35,7 +35,7 @@ $color-blue: #007bff !default;
 $color-red: #d24d57 !default;
 
 $background-color-base: $color-white;
-$base-font-family: "Hiragino Kaku Gothic ProN", Meiryo, Verdana, sans-serif;
+$base-font-family: "Hiragino Kaku Gothic ProN", "Segoe UI", "BIZ UDPGothic", Meiryo, sans-serif;
 $font-color-base: $color-black-light;
 $line-height-base: 1.6875;
 
