--- a/src/_sass/css/_partials/_variables.scss
+++ b/src/_sass/css/_partials/_variables.scss
@@ -1,32 +1,32 @@
-$linear: cubic-bezier(0.25, 0.25, 0.75, 0.75);
-$ease: cubic-bezier(0.25, 0.1, 0.25, 1);
-$ease-in: cubic-bezier(0.42, 0, 1, 1);
-$ease-out: cubic-bezier(0, 0, 0.58, 1);
-$ease-in-out: cubic-bezier(0.42, 0, 0.58, 1);
-$easeInQuad: cubic-bezier(0.55, 0.085, 0.68, 0.53);
-$easeInCubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-$easeInQuart: cubic-bezier(0.895, 0.03, 0.685, 0.22);
-$easeInQuint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-$easeInSine: cubic-bezier(0.47, 0, 0.745, 0.715);
-$easeInExpo: cubic-bezier(0.95, 0.05, 0.795, 0.035);
-$easeInCirc: cubic-bezier(0.6, 0.04, 0.98, 0.335);
-$easeInBack: cubic-bezier(0.6, -0.28, 0.735, 0.045);
-$easeOutQuad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
-$easeOutCubic: cubic-bezier(0.215, 0.61, 0.355, 1);
-$easeOutQuart: cubic-bezier(0.165, 0.84, 0.44, 1);
-$easeOutQuint: cubic-bezier(0.23, 1, 0.32, 1);
-$easeOutSine: cubic-bezier(0.39, 0.575, 0.565, 1);
-$easeOutExpo: cubic-bezier(0.19, 1, 0.22, 1);
-$easeOutCirc: cubic-bezier(0.075, 0.82, 0.165, 1);
-$easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-$easeInOutQuad: cubic-bezier(0.455, 0.03, 0.515, 0.955);
-$easeInOutCubic: cubic-bezier(0.645, 0.045, 0.355, 1);
-$easeInOutQuart: cubic-bezier(0.77, 0, 0.275, 1);
-$easeInOutQuint: cubic-bezier(0.86, 0, 0.07, 1);
-$easeInOutSine: cubic-bezier(0.445, 0.05, 0.55, 0.95);
-$easeInOutExpo: cubic-bezier(1, 0, 0, 1);
-$easeInOutCirc: cubic-bezier(0.785, 0.135, 0.15, 0.86);
-$easeInOutBack: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+$linear: cubic-bezier(0.25, 0.25, 0.75, 0.75) !default;
+$ease: cubic-bezier(0.25, 0.1, 0.25, 1) !default;
+$ease-in: cubic-bezier(0.42, 0, 1, 1) !default;
+$ease-out: cubic-bezier(0, 0, 0.58, 1) !default;
+$ease-in-out: cubic-bezier(0.42, 0, 0.58, 1) !default;
+$easeInQuad: cubic-bezier(0.55, 0.085, 0.68, 0.53) !default;
+$easeInCubic: cubic-bezier(0.55, 0.055, 0.675, 0.19) !default;
+$easeInQuart: cubic-bezier(0.895, 0.03, 0.685, 0.22) !default;
+$easeInQuint: cubic-bezier(0.755, 0.05, 0.855, 0.06) !default;
+$easeInSine: cubic-bezier(0.47, 0, 0.745, 0.715) !default;
+$easeInExpo: cubic-bezier(0.95, 0.05, 0.795, 0.035) !default;
+$easeInCirc: cubic-bezier(0.6, 0.04, 0.98, 0.335) !default;
+$easeInBack: cubic-bezier(0.6, -0.28, 0.735, 0.045) !default;
+$easeOutQuad: cubic-bezier(0.25, 0.46, 0.45, 0.94) !default;
+$easeOutCubic: cubic-bezier(0.215, 0.61, 0.355, 1) !default;
+$easeOutQuart: cubic-bezier(0.165, 0.84, 0.44, 1) !default;
+$easeOutQuint: cubic-bezier(0.23, 1, 0.32, 1) !default;
+$easeOutSine: cubic-bezier(0.39, 0.575, 0.565, 1) !default;
+$easeOutExpo: cubic-bezier(0.19, 1, 0.22, 1) !default;
+$easeOutCirc: cubic-bezier(0.075, 0.82, 0.165, 1) !default;
+$easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275) !default;
+$easeInOutQuad: cubic-bezier(0.455, 0.03, 0.515, 0.955) !default;
+$easeInOutCubic: cubic-bezier(0.645, 0.045, 0.355, 1) !default;
+$easeInOutQuart: cubic-bezier(0.77, 0, 0.275, 1) !default;
+$easeInOutQuint: cubic-bezier(0.86, 0, 0.07, 1) !default;
+$easeInOutSine: cubic-bezier(0.445, 0.05, 0.55, 0.95) !default;
+$easeInOutExpo: cubic-bezier(1, 0, 0, 1) !default;
+$easeInOutCirc: cubic-bezier(0.785, 0.135, 0.15, 0.86) !default;
+$easeInOutBack: cubic-bezier(0.68, -0.55, 0.265, 1.55) !default;
 
 $color-white: #fff !default;
 $color-black: #000 !default;
@@ -34,15 +34,14 @@ $color-black-light: #353535 !default;
 $color-blue: #007bff !default;
 $color-red: #d24d57 !default;
 
-$background-color-base: $color-white;
-$base-font-family: "Hiragino Kaku Gothic ProN", "Segoe UI", "BIZ UDPGothic", Meiryo, sans-serif;
-$font-color-base: $color-black-light;
-$line-height-base: 1.6875;
+$base-background-color: $color-white !default;
+$base-font-color: $color-black-light !default;
+$base-font-family: "Hiragino Kaku Gothic ProN", "Segoe UI", "BIZ UDPGothic", Meiryo, sans-serif !default;
+$base-line-height: 1.6875 !default;
+$base-timing-function: ease !default;
 
-$base-timing-function: ease;
-
-$dark-background-color-base: $color-black-light;
-$dark-font-color-base: $color-white;
+$dark-background-color-base: $color-black-light !default;
+$dark-font-color-base: $color-white !default;
 
 $root-font-sizes: (
   sm: 3.125vw,
