--- a/src/_sass/css/_partials/foundation/_base.scss
+++ b/src/_sass/css/_partials/foundation/_base.scss
@@ -13,12 +13,12 @@
 }
 
 body {
-  color: $font-color-base;
+  color: $base-font-color;
   font-size: 1.6rem;
   font-family: $base-font-family;
-  line-height: $line-height-base;
+  line-height: $base-line-height;
   word-wrap: break-word;
-  background-color: $background-color-base;
+  background-color: $base-background-color;
   -webkit-text-size-adjust: 100%;
 }
 
