:shirt: Chore: コードの整形（#16）

--- a/src/_sass/css/_partials/_variables.scss
+++ b/src/_sass/css/_partials/_variables.scss
@@ -46,13 +46,13 @@ $dark-font-color-base: $color-white !default;
 $root-font-sizes: (
   sm: 3.125vw,
   md: 10px,
-  lg: 10px
+  lg: 10px,
 ) !default;
 
 $breakpoints: (
   sm: 0,
   md: 768px,
-  lg: 1280px
+  lg: 1280px,
 ) !default;
 
 $btn-color: $color-white !default;
