--- a/src/_docs/.vuepress/styles/index.styl
+++ b/src/_docs/.vuepress/styles/index.styl
@@ -136,22 +136,14 @@ fieldset {
   border: 0;
 }
 
-html {
-  font-size: 3.125vw;
-}
-
-@media (min-width: 960px) {
-  html {
-    font-size: 16px;
-  }
-}
-
 body {
   -webkit-text-size-adjust: 100%;
   word-wrap: break-word;
   background-color: #fff;
   color: #333;
-  font-family: "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Verdana, "ＭＳ Ｐゴシック", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, "Hiragino Kaku Gothic ProN", "Segoe UI", "BIZ UDPGothic", Meiryo, sans-serif;
+  font-size 14px;
+  letter-spacing: 0.04em;
   line-height: 1.6875;
 }
 
