--- a/src/_ejs/index.ejs
+++ b/src/_ejs/index.ejs
@@ -12,8 +12,7 @@
   </div>
   <h1>吾輩は猫である。名前はまだ無い。</h1>
   <%- include(sitedata.path.relative + '_partials/_drawer')%>
-  <a class="p-btn -outline js-drawer" href="#" aria-expanded="false" aria-controls="drawer">CLICK ME</a>
-  <a class="p-btn -primary -outline" href="#">CLICK ME</a>
+  <a class="js-drawer" href="#" aria-expanded="false" aria-controls="drawer">CLICK ME</a>
 </main>
 
 <script src="/js/bundle.js"></script>
