:lipstick: Style: 可読性を考慮して本文の line-height の調整

--- a/src/_docs/.vuepress/styles/index.styl
+++ b/src/_docs/.vuepress/styles/index.styl
@@ -144,7 +144,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, "Hiragino Kaku Gothic ProN", "Segoe UI", "BIZ UDPGothic", Meiryo, sans-serif;
   font-size 14px;
   letter-spacing: 0.04em;
-  line-height: 1.6875;
+  line-height: 2;
+}
+
+p {
+  line-height: inherit;
 }
 
 a {
