:truck: Rename: 開発用ディレクトリのリネーム（#30）

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
-<%- include(sitedata.path.relative + '_partials/_meta', {page: 'top'})%>
+<%- include(sitedata.path.relative + 'partials/_meta', {page: 'top'})%>
 <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
