:recycle: Refactor: Sass Modules の書き換え

--- a/src/sass/css/partials/_function.scss
+++ b/src/sass/css/partials/_function.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@use "./variables" as *;
 
 @function breakpoint-next($name, $breakpoints: $breakpoints, $breakpoint-names: map-keys($breakpoints)) {
   $n: index($breakpoint-names, $name);
