--- a/src/sass/css/partials/foundation/_base.scss
+++ b/src/sass/css/partials/foundation/_base.scss
@@ -1,3 +1,6 @@
+@use "../variables" as *;
+@use "../mixins/breakpoints" as *;
+
 :root {
   @each $breakpoint, $value in $breakpoints {
     --breakpoint-#{$breakpoint}: #{$value};
