--- a/src/sass/css/main.scss
+++ b/src/sass/css/main.scss
@@ -1,13 +1,8 @@
 @charset "UTF-8";
 
 @use "sass:meta";
-@import "partials/variables";
-@import "partials/function";
-@import "partials/mixins/**";
-@import "partials/foundation/reset";
-@import "partials/foundation/base";
-@import "partials/helpers/**";
-@import "partials/utilities";
+@use "partials/foundation";
+@use "partials/utilities";
 
 // テスト駆動マークアップ用スタイルシート
 :root {
