:truck: Update: Sass 関数を管理するファイルのリネーム

--- a/src/sass/css/partials/mixins/_breakpoints.scss
+++ b/src/sass/css/partials/mixins/_breakpoints.scss
@@ -1,5 +1,5 @@
 @use "../variables" as *;
-@use "../function" as *;
+@use "../functions" as *;
 
 @mixin breakpoint-up($name) {
   $min: breakpoint-min($name);
