--- a/src/sass/css/partials/_functions.scss
+++ b/src/sass/css/partials/_functions.scss
@@ -1,12 +1,13 @@
 @use "sass:math";
+@use "sass:list";
 @use "./variables" as *;
 
 @function breakpoint-next($name, $breakpoints: $breakpoints, $breakpoint-names: map-keys($breakpoints)) {
-  $n: index($breakpoint-names, $name);
+  $n: list.index($breakpoint-names, $name);
   @if not $n {
     @error "breakpoint `#{$name}` not found in `#{$breakpoints}`";
   }
-  @return if($n < length($breakpoint-names), nth($breakpoint-names, $n + 1), null);
+  @return if($n < list.length($breakpoint-names), list.nth($breakpoint-names, $n + 1), null);
 }
 
 @function breakpoint-min($name) {
