:lipstick: Style: IE サポートフラグの設定

--- a/src/sass/css/partials/_variables.scss
+++ b/src/sass/css/partials/_variables.scss
@@ -1,3 +1,5 @@
+$ie-support: false !default;
+
 $linear: cubic-bezier(0.25, 0.25, 0.75, 0.75) !default;
 $ease: cubic-bezier(0.25, 0.1, 0.25, 1) !default;
 $ease-in: cubic-bezier(0.42, 0, 1, 1) !default;
