--- a/src/ejs/partials/_meta.ejs
+++ b/src/ejs/partials/_meta.ejs
@@ -6,7 +6,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta property="og:title" content="<%- sitedata[page].title %>">
 <meta property="og:description" content="<%- sitedata[page].description %>">
-<meta property="og:type" content="website">
+<meta property="og:type" content="<%- page === 'top' ? 'website' : 'article' %>">
 <meta property="og:url" content="<%- sitedata[page].url %>">
 <meta property="og:image" content="<%- sitedata[page].ogimage %>">
 <meta property="fb:app_id" content="＊＊＊＊">
