--- a/src/sass/css/partials/_utilities.scss
+++ b/src/sass/css/partials/_utilities.scss
@@ -6,7 +6,7 @@
     @each $breakpoint in map-keys($breakpoints) {
       @include breakpoint-only($breakpoint) {
         @each $value in map-get($utility, values) {
-          .#{map-get($utility, class)}-#{$value}-#{$breakpoint} {
+          .#{$breakpoint}\:#{map-get($utility, class)}-#{$value} {
             #{map-get($utility, property)}: $value !important;
           }
         }
